fix log wrapping

--- a/client/assets/styles/scss/modals/modals-edit.scss
+++ b/client/assets/styles/scss/modals/modals-edit.scss
@@ -242,6 +242,7 @@
 
     .icons-log {
       margin-left: 9px;
+      position: absolute;
     }
 
     .icons-arrow-forward {
